# in-vite

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix
.github/: FUNDING.yml
examples/actix-minijinja-alpine-tailwind/: Cargo.toml  package-lock.json  package.json
examples/actix-minijinja-alpine-tailwind/src/: main.rs
examples/actix-minijinja-alpine-tailwind/src/templates/: index.html
examples/axum-tera-alpine-tailwind/: Cargo.toml  package-lock.json  package.json  tailwind.config.js
examples/axum-tera-alpine-tailwind/src/: main.rs
examples/axum-tera-alpine-tailwind/src/js/: app.css  main.ts
examples/axum-tera-alpine-tailwind/src/templates/: index.html
src/: error.rs  lib.rs  manifest.rs  resource.rs  vite.rs
src/integrations/: minijinja.rs  mod.rs  tera.rs
test/: sample_manifest.json
