[package]
name = "in-vite"
version = "0.1.0"
edition = "2021"

[dependencies]
minijinja = { version = "2.2.0", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tera = { version = "1.20.0", optional = true }

[features]
default = ["tera", "minijinja"]
tera = ["dep:tera"]
minijinja = ["dep:minijinja"]
