[package]
name = "in-vite"
version = "0.1.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/HiImJulien/in-vite"
license = "MIT"
keywords = ["vite", "web-dev", "bundler", "rollup"]
description = "Vite integration for your Rust backend."
categories = ["development-tools", "web-programming"]
authors = ["Julian Kirsch <contact@juliankirsch.me>"]

[dependencies]
minijinja = { version = "2.2.0", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tera = { version = "1.20.0", optional = true }
thiserror = "1.0.63"


[features]
default = []
tera = ["dep:tera"]
minijinja = ["dep:minijinja"]
